@@ -173,6 +173,14 @@ local function muiMisc()
 				get = function(info) return E.db.muiMisc[ info[#info] ] end,
 				set = function(info, value) E.db.muiMisc[ info[#info] ] = value; end,
 			},
+			FriendAlert = {
+				order = 8,
+				type = 'toggle',
+				name = L['Battle.net Alert'],
+				desc = L['Shows a Chat notification if a Battle.net Friend switch Games or goes offline.'],
+				get = function(info) return E.db.muiMisc[ info[#info] ] end,
+				set = function(info, value) E.db.muiMisc[ info[#info] ] = value; E:StaticPopup_Show('PRIVATE_RL'); end,
+			},
 		},
 	}
 end
