@@ -1,3 +1,9 @@
+<b><u> v1.05, xx.xx.2015</b></u>
+<font color=#FF8C00>&#9830;</font> Core: Change the SlashCommand to enter the Setup "/muisetup"
+<font color=#FF8C00>&#9830;</font> Install: MerathilisUI Install Process should now appears after BenikUI is finished (If BenikUI is loaded.)
+<font color=#FF8C00>&#9830;</font> Misc: Shows a Chat notification if a Battle.net Friend switch Games or goes offline
+<font color=#FF8C00>&#9830;</font> ...
+
 <b><u> v1.04, 22.10.2015</b></u>
 <font color=#FF8C00>&#9830;</font> Install: Don't use detachedPortraits and Powerbar. (Conflict with a BenikUI Layout)
 <font color=#FF8C00>&#9830;</font> Install: Remove AddOnSkins from the Installation Process. Now it has its own File.
